# air_quality

./: .dockerignore  .gcloudignore  .gitignore  .gitleaks.toml  .sqlfluff  AGENTS.md  CODEBASE_QUALITY.md  DATA_SOURCES.md  RUNBOOK.md  cloudbuild.yaml  project-log.md  project_setup_and_aqpooler.md  pyproject.toml  requirements-dev.txt
.opencode/agents/: memory.md  review.md
dashboard/: Dockerfile  app.py  requirements.txt
docs/: dev-tools-setup.md
docs/specs/: dashboard_data_plan.md  ingestion_test_coverage_plan.md
ingestion/: .dockerignore
ingestion/openaq_poller/: Dockerfile  main.py  progress_tracker.py  rate_limiter.py  requirements.txt
ingestion/shared/: __init__.py  datetime_utils.py  http_utils.py  ingestion_log.py  progress_tracker.py  rate_limiter.py
ingestion/static/: station_metadata.py
ingestion/weather_poller/: Dockerfile  main.py  requirements.txt
kilo/: instructions.md
kilo/memory/: current-feature.md  project-log.md
kilo/skills/: bq-query.md  check-code-quality.md  lint-and-format.md  run-runbook.md  run-unit-tests.md  teardown-dev.md  validate-infra.md  validate-sql-tests.md
scripts/: create_infra.sh  teardown_project.sh  validate-infra.sh
tests/bq_views/: run_view_tests.py  view_manifest.json
tests/bq_views/assertions/: v_ingestion_overview__latest_run_is_correct.sql  v_ingestion_overview__one_row_per_source.sql  (+16 more)
tests/integration/: run_rate_limit_test.sh  test_rate_limit_live.py
tests/unit/: test_datetime_utils.py  test_http_utils.py  test_ingestion_log.py  test_openaq_poller.py  test_progress_tracker.py  test_rate_limiter.py  test_station_metadata.py  test_weather_poller.py
warehouse/analytics/: v_ingestion_overview.sql  v_station_current_outlook.sql  v_station_dispersion_outlook.sql  v_station_freshness.sql  v_station_hourly_combined.sql  v_station_hourly_wide.sql  v_station_latest_pollutants.sql
warehouse/raw/: create_ingestion_log_table.sql  create_raw_tables.sql
warehouse/staging/: create_weather_views.sql  v_openaq_deduped.sql  v_weather_deduped.sql
warehouse/tests/: run_view_tests.py  view_manifest.json
(+24 files in other folders)
