[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-quality-platform"
version = "0.1.0"
description = "Air quality ingestion jobs"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "ingestion*"]