[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-quality-platform"
version = "0.1.0"
description = "Air quality ingestion jobs"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "ingestion*"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    ".venv",
    "warehouse/tests/",  # template-rendered SQL test artefacts
]
lint.select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
lint.ignore = ["E501"]  # line length handled by formatter
lint.isort.known-first-party = ["ingestion"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.12"
exclude = [
    "^warehouse/tests/",
    "^dashboard/",
    "^ingestion/static/",
]
[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["ingestion/shared"]

[tool.coverage.report]
fail_under = 80
exclude_also = [
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]